--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "pimcore/demo",
+  "name": "patrickjaja/pimcore-ai-demo",
   "type": "project",
   "description": "Demo Application for Pimcore 6",
   "license": "GPL-3.0-or-later",
