--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,8 @@ services:
     php:
         user: '1000:1000' # set to your uid:gid
         image: pimcore/pimcore:php8.3-debug-latest
+        ports:
+            - "5000:5000"
         environment:
             COMPOSER_HOME: /var/www/html
             PHP_IDE_CONFIG: serverName=localhost
