--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -7,7 +7,11 @@ name: app
 # in multiple versions. Check the PHP documentation
 # (https://docs.platform.sh/languages/php.html#supported-versions)
 # to find the supported versions for the 'php' type.
-type: 'pimcore/pimcore:php8.3-debug-latest'
+type: 'php:8.3'
+
+runtime:
+    extensions:
+        - sodium
 
 # The following block defines a single writable directory, 'web/uploads'
 # The 'source' specifies where the writable mount is. The 'local' source
