--- a/composer.json
+++ b/composer.json
@@ -16,25 +16,26 @@
   "prefer-stable": true,
   "minimum-stability": "dev",
   "require": {
+    "gotenberg/gotenberg-php": "^1.1 || ^2.0",
     "php-http/guzzle7-adapter": "^0.1.1",
     "php-http/httplug-bundle": "^1",
     "phpdocumentor/reflection-docblock": "^5.2",
-    "pimcore/platform-version": "^2024.4",
-    "pimcore/customer-management-framework-bundle": "*",
-    "pimcore/pimcore": "*",
-    "pimcore/web2print-tools-bundle": "*",
-    "pimcore/data-hub": "*",
-    "pimcore/payment-provider-paypal-smart-payment-button": "^2.0",
     "pimcore/admin-ui-classic-bundle": "*",
+    "pimcore/customer-management-framework-bundle": "*",
+    "pimcore/data-hub": "*",
     "pimcore/ecommerce-framework-bundle": "*",
-    "pimcore/web-to-print-bundle": "*",
     "pimcore/newsletter-bundle": "*",
+    "pimcore/payment-provider-paypal-smart-payment-button": "^2.0",
+    "pimcore/pimcore": "*",
+    "pimcore/platform-version": "^2024.4",
     "pimcore/quill-bundle": "*",
-    "symfony/runtime": "^6.2",
-    "symfony/intl": "^6.2",
+    "pimcore/web-to-print-bundle": "*",
+    "pimcore/web2print-tools-bundle": "*",
     "symfony/dotenv": "^6.2",
+    "symfony/http-client": "^7.2",
+    "symfony/intl": "^6.2",
     "symfony/property-info": "^6.3",
-    "gotenberg/gotenberg-php": "^1.1 || ^2.0"
+    "symfony/runtime": "^6.2"
   },
   "suggest": {
     "pimcore/elasticsearch-client": "Required for Elastic Search service",
